Closed Bug 693424 Opened 14 years ago Closed 14 years ago

"ASSERTION: Should not be calling this on a non-display child" in nsSVGForeignObjectFrame::GetBBoxContribution

Categories

(Core :: SVG, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached image testcase
###!!! ASSERTION: Should not be calling this on a non-display child: '!(GetStateBits() & NS_STATE_SVG_NONDISPLAY_CHILD)', file layout/svg/base/src/nsSVGForeignObjectFrame.cpp, line 440
Attached file stack trace
the assertion is bogus and needs removing that's all.
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #568929 - Flags: review?(dholbert)
Comment on attachment 568929 [details] [diff] [review] patch Sorry for the delay -- I must've skipped over the bugmail for this, and only just noticed the review-request. r=me
Attachment #568929 - Flags: review?(dholbert) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla11
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: