Bug 693424 - remove Should not be calling this on a non-display child assert in nsSVGForeignObjectFrame::GetBBoxContribution. r=dholbert